Font layout and spacing fixes

--- a/style.css
+++ b/style.css
@@ -15,13 +15,13 @@ body {
 }
 
 h1 {
-	font-size: 50px;
+	font-size: 4rem;
 	text-align: center;
 	color: #f7e240;
-	-webkit-text-stroke: 3px #a81fa1;
+	-webkit-text-stroke: .2rem #a81fa1;
 	position: relative;
-	top: 20px;
-	padding-bottom: 20px;
+	top: 2rem;
+	padding-bottom: 2rem;
 }
 
 a {
@@ -44,25 +44,31 @@ a:hover {
 	margin-left: 25%;
   margin-right: 25%;
   text-align: center;
-  width: 50%;
-  max-height: 250px;
-	font-size: 25px;
+  min-width: 33%;
+  max-width: 50%;
+  min-height: 10rem;
+	font-size: 2rem;
 	color:#140cb0;
-	padding-bottom: 20px;
+  top: 2rem;
+	padding-bottom: 2rem;
  }
 
  .hint.mic-status {
+  padding-top: 2rem;
  	visibility: hidden;
  }
 
 .question-header {
 	text-align:left;
+  padding-left: 2rem;
 }
 
 .question-response {
-	padding-left:20px;
-	width: 75%;
+	padding-left:2rem;
+	min-width: 33%;
+  max-width: 50%;
   color:#140cb0;
+  font-size: 1.2rem;
 }
 
 .response-bullet {
